0.4.3  Nick Burch <gagravarr@users.sourceforge.net>
	* pwlist.c: fixes to compiler warnings 
	* gnupg.h: added to reduce compiler warnings
	* ui.h: add missing definition
	* actions.c: correct return types, which fixes an OS/X issue

0.4.2  Nick Burch <gagravarr@users.sourceforge.net>
	* pwlist.c: rather than having pwlist_export and pwlist_export_passwd
	    duplicate functionality, move to a common exporter
	* pwlist.c: fix password list/entry export on newer libc's
	* actions.c: when exporting, give a different error if key has expired
	* help.h: tweak information on what ^W and ^R do
	* gnupg.c: correct key search logic when more than one key for a given
	    email address exists, where some are expired and one isn't
	* gnupg.c: fix issue with compiling expired key regular expressions on
	    more modern libc's
	* gnupg.c: avoid some compiler warnings 

0.4.1  Nick Burch <gagravarr@users.sourceforge.net>
	* *.c: avoid compiler warnings about implicit declaration of free 
	* ui.c: Turn tabs into spaces (neither xml nor ncurses like tabs much)
	* pwlist.c: Tweak the entry escaping to still work properly when
		heavy compiler optimisations are enabled

0.4.0  Nick Burch <gagravarr@users.sourceforge.net>
	* search.c: new support for case insensitive searching across
	    entries and sublists - use / to search, f for old style filtering
	* gnupg.c: gpg_check_id now reports on expired keys (uses
		--with-colons option to get more details from gpg to spot this)
	* pwman.c: check that the key can be found and hasn't expired during
		startup, warning about the problem in advance
	* uilist.c: change the key of filtering from / to f
	* pwlist.c/uilist.c: support searching for entries via /
	* gnupg.c: if the gnupg call fails and generates a SIGPIPE, make
		some attempt to let the user know what went wrong with it

0.3.9   Nick Burch <gagravarr@users.sourceforge.net>
	* gnupg.c: fix segfault if the secret key isn't present
