@@ -457,6 +457,8 @@ char *
 ui_statusline_ask_str(char *msg, char *input, int len)
 {
 	char *tmp;
+	char *tmp2;
+	char *tmp3;
 	int x = strlen(msg) + 5;
 
 	if(input == NULL){
@@ -479,6 +481,35 @@ ui_statusline_ask_str(char *msg, char *input, int len)
 	while(*tmp != 0) {
 		if(*tmp == 9) *tmp = ' ';
 		tmp++;
+	}
+
+	// In some cases (eg when inside screen), the backspace
+	// comes through to us. Handle it here if needed
+	tmp = input;
+	while(*tmp != 0) {
+		if(*tmp == 8) {
+         // tmp2 is where to copy to, tmp3 is where to copy from
+         tmp3 = tmp + 1;
+         if(tmp == input) {
+            tmp2 = tmp;
+         } else {
+            tmp2 = tmp - 1;
+         }
+
+         // When we're done, start from the character
+         //  we copied in to
+         tmp = tmp2;
+
+         // Process forward
+         while(*tmp3 != 0) {
+            *tmp2 = *tmp3;
+            tmp2++;
+            tmp3++;
+         }
+         *tmp2 = 0;
+      } else {
+   		tmp++;
+      }
 	}
 	
 	// All done
